welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: not found: value avanve
	avanve
        ^