welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	for (i <- 1 to 4) {
	avanve
	avance()
	left()
	}
}